TEST_PROGRAMS/VALID/expressionStatement.go
package main

func main(){
//this is allowed
1+1
}
