TEST_PROGRAMS/INVALID/04/82.go
package main

func main() {
    // Illegal expression as statement
    2
}
